modified DB to work with link aliases